update safe recovery service

--- a/docs/wallet/plugins/1-recovery-with-guardians.mdx
+++ b/docs/wallet/plugins/1-recovery-with-guardians.mdx
@@ -56,6 +56,13 @@ Learn more on how the Social Recovery Module work on this [post](../../../blog/m
 
 - Deployment addresses for different grace periods can be found [here](/wallet/technical-reference/deployments/#social-recovery-module).
 
+#### Frontend: SafeCover
+
+Built to server as a secondary interface for users to recover their Safe accounts
+
+- Link: https://safecover.eth.limo
+- Source code for releases: [candidelabs/safecover](https://github.com/candidelabs/safecover)
+
 ## Usage
 
 ### Install
