overral structure improvement

--- a/docs/instagas/6-batch-sponsor-transactions.mdx
+++ b/docs/instagas/6-batch-sponsor-transactions.mdx
@@ -318,7 +318,9 @@ Requests that the wallet deliver a group of function calls on-chain from the use
     "capabilities": {
       "paymasterService": {
         "url": "https://...",
-        "optional": true
+        "context": {
+          "sponsorshipPolicyId": "962b252c"
+        }
       }
     }
   }
