--- a/docs/wallet/abstractionkit/3.paymaster.mdx
+++ b/docs/wallet/abstractionkit/3.paymaster.mdx
@@ -574,7 +574,7 @@ console.log(sponsorMetadata);
 }
 {
   name: 'Candide',
-  description: 'Developers from across the globe use Candide Atelier to build on Safe Accounts and tap into a network of third-party gas sponsorship to ultimately supercharge their user growth',
+  description: 'Developers from across the globe use Candide to build on Safe Accounts and tap into a network of third-party gas sponsorship to ultimately supercharge their user growth',
   url: 'https://candide.dev',
   icons: [ 'https://docs.candide.dev/img/logo-dark.png' ]
 }
