--- a/docs/wallet/plugins/2-allowance.mdx
+++ b/docs/wallet/plugins/2-allowance.mdx
@@ -157,7 +157,7 @@ const allowanceTransferMetaTransaction =
 ```
 
 :::info
-Candide Atelier offers an automation tool to execute delegated allowances. Contact us directly for Beta access.
+Candide offers an automation tool to execute delegated allowances. Contact us directly for Beta access.
 :::
 
 ## Methods
