some improvements to recovery ux api page

--- a/docs/wallet/recovery/2-ux-api.mdx
+++ b/docs/wallet/recovery/2-ux-api.mdx
@@ -27,12 +27,15 @@ import {
 
 # Safe Recovery UX API
 
-Safe Recovery UX API gives developers the ability to build smooth recovery process
+## Benefits
 
-1. **Alerts and Notifications**: Account owners can subscribe to receive notifications via email or SMS when a recovery request is initiated on-chain.
-2. **One click for Guardians**: By aggregating signatures, we enable off-chain collection and automatic execution once all signatures are received.
-3. **Auto Executed**: A built-in relayer to submit signed transactions on behalf of guardians for both confirmation and finalization after the grace period.
-4. **Social Engineering Protection**: A communication system using emojis that allows guardians to verify and approve legitimate recovery requests from their rightful owners.
+| Feature                          | Description                                                                                                           |
+|----------------------------------|-----------------------------------------------------------------------------------------------------------------------|
+| Alerts and Notifications         | Account owners subscribe to receive notifications via email or SMS when a recovery request is initiated on-chain. |
+| Guardians Sign once | Off-chain signature collection eliminating the need for guardians to share links with one another.
+| Privacy Guaranteed | Guardians sign only off-chain and do not need to maintain a balance in their accounts, allowing them to preserve their pseudonymity with fresh accounts|  
+| Social Engineering Protection     | A communication system using emojis that allows guardians to verify and approve legitimate recovery requests from their rightful owners. |
+| Auto Finalization After Grace Period | A built-in relayer automatically submits signed transactions on behalf of guardians for confirmation and finalization once the grace period has elapsed.|
 
 :::info
 The following API is in a pre-release phase. [Request access here](https://app.formbricks.com/s/brdzlw0t897cz3mxl3ausfb5).    
