replace yarn with npm

--- a/docs/wallet/abstractionkit/9-simple-7702-account.mdx
+++ b/docs/wallet/abstractionkit/9-simple-7702-account.mdx
@@ -29,7 +29,7 @@ The contracts have been developed by the Ethereum Foundation Account Abstraction
 ### Installation
 
 ```bash
-yarn add abstractionkit@0.2.16
+npm install abstractionkit@0.2.16
 ```
 
 :::note
