--- a/docs/wallet/guides/0-getting-started-eip-7702.mdx
+++ b/docs/wallet/guides/0-getting-started-eip-7702.mdx
@@ -37,7 +37,7 @@ yarn init
 2. Install required dependencies
 
 ```bash
-yarn add abstractionkit@0.2.16 dotenv ethers
+npm install abstractionkit@0.2.16 dotenv ethers
 ```
 
 :::note
